crates/kaban-parser/tests/snapshots/statements__func_decl_with_self_param_only_and_generics.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: print
---
input: func foo<T>(self, y: T) -> i32 { let z = self.y; return z; }

Block [
    FuncDeclWithGeneric {
        is_pub: false,
        name: Identifier("foo"),
        params: [
            SelfParam,
            Param {
                binding: IdentifierBinding {
                    name: Identifier("y"),
                    mutable: false,
                },
                type: NamedType(
                    Identifier("T"),
                ),
            },
        ],
        generic_params: [
            GenericParam {
                name: Identifier("T"),
            },
        ],
        return_type: Type(I32),
        body: Block [
            Let {
                name: IdentifierBinding {
                    name: Identifier("z"),
                    mutable: false,
                },
                assignment: MemberAccess {
                    left: Self_,
                    right: Identifier("y"),
                },
            },
            Return(
                Identifier("z"),
            ),
        ],
    },
]
