crates/kaban-parser/tests/snapshots/statements__func_decl_with_self_pointer.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: print
---
input: func foo(self*, x: i32) -> i32 { let z = self.y; return z; }

Block [
    FuncDeclWithNoGeneric {
        is_pub: false,
        name: Identifier("foo"),
        params: [
            SelfParam(
                Star("*"),
            ),
            Param {
                binding: IdentifierBinding {
                    name: Identifier("x"),
                    mutable: false,
                },
                type: Type(I32),
            },
        ],
        return_type: Type(I32),
        body: Block [
            Let {
                name: IdentifierBinding {
                    name: Identifier("z"),
                    mutable: false,
                },
                assignment: MemberAccess {
                    left: Self_,
                    right: Identifier("y"),
                },
            },
            Return(
                Identifier("z"),
            ),
        ],
    },
]
