crates/kaban-parser/tests/snapshots/statements__impl_decl_with_anonymous_constructor_only.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: print
---
input: impl Person::Core { pub func new() -> self { } }

Block [
    ImplDeclWithNoGeneric {
        is_pub: false,
        impl_name: Identifier("Core"),
        self_type: NamedType(
            Identifier("Person"),
        ),
        statements: [
            FuncDeclWithNoGeneric {
                is_pub: true,
                name: Identifier("new"),
                params: [],
                return_type: Self_,
                body: Block [],
            },
        ],
    },
]
